initail ishihary test

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,4 +1,18 @@
-h1 Hello world!
-p
-  | This is a test
-    abc
+- content_for :title do
+  h1 Przetestuj swój wzrok
+
+.row
+  .span12
+    p Na tej stronie możesz wykonać kilka prostych badań wzroku.
+    p Wybierz grupę testów by rozpocząć badanie.
+    p Po zakończeniu badania otrzymasz wyniki.
+    p Pamiętaj że te testy nie zastąpią profesjonalnych badań wykonanych przez okulistę.
+
+.row
+  .span4
+    h3 Tablice Ishihary
+    p Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.
+    a.btn href='tablice_ishinary.html'
+      ' Tablice Ishihary
+      i.icon-arrow-right
+
