fixed answare 11 background; fixed changed answare color issue

--- a/source/tablice_ishinary.html.slim
+++ b/source/tablice_ishinary.html.slim
@@ -60,6 +60,7 @@
               $("#result-description#{plate}").contents().remove()
               $("#result-description#{plate}").append(description)
 
+              $("#result#{plate}").removeClass("alert alert-error alert-success alert-info")
               if (status == 'error' || status == 'success' || status == 'info')
                 $("#result#{plate}").addClass("alert alert-" + status)
 
