renamed site; menu and index updates

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -10,9 +10,9 @@
 
 .row
   .span4
-    h3 Tablice Ishihary
+    h3 Tarcze Ishihary
     p Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.
-    a.btn href='tablice_ishinary.html'
-      ' Tablice Ishihary
+    a.btn href='tarcze_ishinary.html'
+      ' Tarcze Ishihary
       i.icon-arrow-right
 
