--- a/source/tarcze_ishinary.html.slim
+++ b/source/tarcze_ishinary.html.slim
@@ -2,7 +2,7 @@
   h1 Tarcze Ishihary
 
 - content_for :footer do
-  ' Na podstawie testów ze strony:
+  ' Na podstawie testów ze strony
   a href='http://www.colour-blindness.com/colour-blindness-tests/ishihara-colour-test-plates/' Colour-Blindness.com
 
 .row
