image colour fix; navigation info

--- a/source/tarcze_ishinary.html.slim
+++ b/source/tarcze_ishinary.html.slim
@@ -31,9 +31,14 @@
                 ol
                   li Siądź około 75 centymetrów od monitora, tak aby tarcze były na wysokości wzroku.
                   li Zalecamy delikatne naturalne oświetlenie pomieszczenia tak aby nie było odbić od ekranu. Nienaturalnie oświetlenie i odbicia mogą wpłynąć na kolory przedstawionych tarcz.
-                  li Sprubuj zidentyfikować liczbę lub szlaczek w przeciągu 5 sekund, następnie kliknij na wybraną odpowiedź.
+                  li Przejdź do tarczy numer 1 i sprubuj zidentyfikować liczbę lub szlaczek w przeciągu 5 sekund, następnie kliknij na wybraną odpowiedź.
                   li Wybierz numer kolejnej tarczy i kontynuuj test aż do ostatniej tarczy.
                   li Przejdź do wyników gdy już zaznaczysz odpowiedzi dla wszystkich tarcz.
+                .alert.alert-info
+                  strong Nawigacja
+                  ul
+                    li Zawsze możesz wrócic do tej intrukcji, dowolnej tarczy i wyników
+                    li Przeładuj stronę aby rozpocząć od nowa
 
         - (1..24).each do |plate|
           .tab-pane id="plate#{plate}"
